# cy_frame

./: CMakeLists.txt  README.md  build.py  date2ver  main.cc
assets/layout/: page_home.xml
config/: config_info.h  series_info.h
script/: README.md  build.sh  cdroid_patch.sh  checkLang.py  fill_bg.py  fonts.sh  kk_frame.ps1  ota.py  start.sh  x64.sh
script/device/: env.sh  mount.sh  pull.sh  run.sh  updating.sh  upgrade.sh
src/common/: comm_class.cc  comm_class.h  common_time.cc  common_time.h
src/data/: base_data.h  struct.h
src/function/: json_func.h  this_func.cc  this_func.h  tuya_func.cc  tuya_func.h
src/project/: config_mgr.cc  config_mgr.h  global_data.cc  global_data.h  timer_mgr.cc  timer_mgr.h  work_timer.cc  work_timer.h
src/protocol/: btn_mgr.h  conn_mgr.h  packet_buffer.cc  packet_buffer.h  packet_handler.h  tuya_mgr.cc  tuya_mgr.h
src/viewlibs/: arc_seekbar.cc  arc_seekbar.h  baseItemAnimator.cc  baseItemAnimator.h  cdroid_keyboard.cc  gaussFilter.c  gaussFilter.h  gaussfilterdrawable.cc  gaussfilterdrawable.h  gaussianblur.h  pickerLayoutManager.cc  pickerLayoutManager.h  pickerSnapHelper.cc  pickerSnapHelper.h  rkLayoutManage.cc  rkLayoutManage.h  rvNumberPicker.cc  rvNumberPicker.h
src/windows/: base.cc  base.h  msg.h  page_home.cc  page_home.h  pop_lock.cc  pop_lock.h  pop_tip.cc  pop_tip.h  wind_base.cc  wind_base.h  wind_mgr.cc  wind_mgr.h
